@@ -15,6 +15,7 @@
 #include <typeinfo>
 #include <sstream>
 #include <cassert>
+#include <cstring>
 #include <vector>
 #include <algorithm>
 
